src/test/ui/const-generics/invariant.stderr
warning: conflicting implementations of trait `SadBee` for type `for<'a> fn(&'a ())`
  --> $DIR/invariant.rs:14:1
   |
LL | impl SadBee for for<'a> fn(&'a ()) {
   | ---------------------------------- first implementation here
...
LL | impl SadBee for fn(&'static ()) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `for<'a> fn(&'a ())`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #56105 <https://github.com/rust-lang/rust/issues/56105>
   = note: this behavior recently changed as a result of a bug fix; see rust-lang/rust#56105 for details
   = note: `#[warn(coherence_leak_check)]` on by default

error[E0308]: mismatched types
  --> $DIR/invariant.rs:31:28
   |
LL |     let y = covariant(&Foo([], PhantomData));
   |                            ^^ expected `<_ as SadBee>::ASSOC`, found `<for<'a> fn(&'a ()) as SadBee>::ASSOC`
   |
   = note: expected constant `<_ as SadBee>::ASSOC`
              found constant `<for<'a> fn(&'a ()) as SadBee>::ASSOC`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0308`.
